syntax = "proto3";

package me.pgthinker.admin;

import "google/protobuf/timestamp.proto"; // 导入时间戳消息

option java_multiple_files = false;
option java_package = "me.pgthinker.admin.message";
option java_outer_classname = "AdminDataProto";



// 传输数据的消息定义
message AdminData {
  google.protobuf.Timestamp timestamp = 1; // 时间戳
  map<string,string> metaData = 2; // 元数据
}
